I added a picture of myself

--- a/My projects.html
+++ b/My projects.html
@@ -42,7 +42,9 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <div class="avatar">NT</div>
+        <div class="avatar">
+    <img src="myphoto.jpg" alt="Profile photo">
+</div>
         <div>
           <h1>Ndiliswa Tyobeka</h1>
           <p class="lead">Junior Software Engineer — Python • Flask • JavaScript • AI integration </p>
