--- a/My projects.html
+++ b/My projects.html
@@ -12,6 +12,15 @@
       --maxw: 980px;
       --radius: 12px;
       font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+
+      .avatar {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  background-image: url("images/myphoto.jpg");
+  background-size: cover;
+  background-position: center;
+}
       
     }
     html,body{height:100%;margin:0;background:var(--bg);color:#111;background-color: rgb(250, 245, 241);}
