--- a/My projects.html
+++ b/My projects.html
@@ -50,7 +50,7 @@
     <header>
       <div class="brand">
   <div class="avatar">
-    <img src="your-image.jpg" alt="Avatar">
+    <img src="myphoto.jpg" alt="Avatar">
 </div>
 
    <div>
