--- a/My projects.html
+++ b/My projects.html
@@ -13,13 +13,12 @@
       --radius: 12px;
       font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
 
-.avatar img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;   /* keeps proportions while filling the box */
-    border-radius: 12px; /* same as avatar container */
-}
-      
+.avatar {
+    width: 72px;
+    height: 72px;
+    border-radius: 12px;
+    object-fit: cover;
+} 
     }
     html,body{height:100%;margin:0;background:var(--bg);color:#111;background-color: rgb(250, 245, 241);}
     .wrap{max-width:var(--maxw);margin:36px auto;padding:40px;}
